--- a/index.html
+++ b/index.html
@@ -1,31 +1,14 @@
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>FamilySearch Indexing Projects</title>
-  <link rel="stylesheet" href="//familysearch.org/hf/hf.css">
-    <!-- Optional Engage Typography stylesheet -->
-    <!--<link rel="stylesheet" href="//familysearch.org/hf/engage-type.css">--> 
-    <script type="text/javascript">
-      (function() {
-        var fs = document.createElement('script'); fs.type = 'text/javascript'; fs.async = true;
-        var params = "?";
-        params += "app_name=" + ""; // tree | photos | temple | etc... - sets the active tab.
-        //params += "&"; //needed if multiple params are set
-        //params += "base_url=" + "https://familysearch.org"; //use this if you need to override your nav links.
-        fs.src = 'https://familysearch.org/hf/hf.js' + params;
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(fs, s);
-      })();
-    </script>
-</head>
-<body>
+---
+layout: default
+title: FS Indexing Projects
+---
 
-  <header class="global-engage-nav-loading"></header>
+<h2>{{page.title}}</h2>
 
-  <h1>FS Indexing Projects</h1>
-   
-  <footer></footer>
-  
-</body>
-</html>
-
-
+<ul>
+  <li><a href="wyoming.html">Wyoming</a></li>
+  <li><a href="wyoming.html">Wyoming</a></li>
+  <li><a href="wyoming.html">Wyoming</a></li>
+  <li><a href="wyoming.html">Wyoming</a></li>
+  <li><a href="wyoming.html">Wyoming</a></li>
+</ul>
