--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@ title: FS Indexing Projects
 
 <ul>
   <li><a href="wyoming.html">Wyoming</a></li>
-  <li><a href="wyoming.html">Wyoming</a></li>
-  <li><a href="wyoming.html">Wyoming</a></li>
-  <li><a href="wyoming.html">Wyoming</a></li>
-  <li><a href="wyoming.html">Wyoming</a></li>
+  <li><a href="mexico.html">Mexico page</a></li>
+  <li><a href="mexico">Mexico directory</a></li>
+  <li><a href="test">Nic's test page</a></li>
 </ul>
